name:                   mini-tweet
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -static
  exposed-modules:      MiniTweet.Authorize
  other-modules:        MiniTweet.Cache
                      , MiniTweet.OAuth
  build-depends:        base >= 4.6 && < 5
                      , authenticate-oauth >= 1.4 && < 1.5
                      , bytestring
                      , data-default
                      , directory
                      , filepath
                      , http-conduit >= 2.0 && < 2.2
                      , text >= 0.11 && < 2.0
                      , transformers
                      , twitter-conduit >= 0.1.0 && < 0.2
                      , twitter-types

executable mt
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -static
  build-depends:        base
                      , mini-tweet
                      , filepath
                      , text
                      , xdg-basedir

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/mini-tweet
