name:                   mini-tweet
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall -static
  exposed-modules:      Web.Authenticate.OAuth.CLI
  build-depends:        base >= 4.6 && < 5
                      , authenticate-oauth >= 1.4 && < 1.5
                      , bytestring
                      , directory
                      , filepath
                      , http-conduit >= 2.0 && < 2.2
                      , transformers
                      , xdg-basedir

executable mt
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -static
  build-depends:        base
                      , mini-tweet
                      , text
                      , twitter-conduit >= 0.1.0 && < 0.2
                      , twitter-types
                      , http-conduit >= 2.0 && < 2.2
                      , data-default
                      , authenticate-oauth >= 1.4 && < 1.5
                      , bytestring

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/mini-tweet
