name:                   mini-tweet
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

executable mt
  default-language:     Haskell2010
  main-is:              main.hs
  ghc-options:          -Wall -static
  build-depends:        base
                      , authenticate-oauth
                      , authenticate-oauth-cli
                      , bytestring
                      , data-default
                      , http-conduit >= 2.0 && < 2.2
                      , text
                      , twitter-conduit >= 0.1.0 && < 0.2
                      , twitter-types

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/mini-tweet
